#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([libaacenc], [1.0], [akira_asakura@dwango.co.jp])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([libSYS/src/genericStds.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_CONFIG_FILES([Makefile])

AC_PROG_RANLIB
AC_OUTPUT

